# wingosy-launcher

./: .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  E2E_TEST_COVERAGE.md  README.md  TESTING.md  index.html  package-lock.json  package.json  wdio.conf.js
e2e-webdriver/: retroarch-cores.spec.js  rom-download.spec.js
scripts/: generate-icons.cjs
src/: App.jsx  main.jsx  main.rs  theme.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  main.rs
src-tauri/src/api/: download.rs  mod.rs  romm.rs
src-tauri/src/config/: mod.rs
src-tauri/src/database/: collections.rs  connection.rs  emulators.rs  games.rs  mod.rs  platforms.rs
src-tauri/src/emulators/: cores.rs  detection.rs  github.rs  installer.rs  launcher.rs  mod.rs
src-tauri/src/models/: collection.rs  emulator.rs  game.rs  mod.rs  platform.rs  sync.rs
src-tauri/src/scanner/: mod.rs
src-tauri/tests/: emulator_integration.rs  romm_integration.rs
src/api/: mod.rs
src/components/: GameCard.jsx  GameDetails.jsx  Library.jsx  Settings.jsx  SetupWizard.jsx  Sidebar.jsx
src/database/: collections.rs  connection.rs  emulators.rs  games.rs  mod.rs  platforms.rs
src/emulators/: launcher.rs  mod.rs
src/models/: emulator.rs  game.rs
src/scanner/: mod.rs
src/ui/: app.rs  mod.rs  theme.rs
src/ui/components/: mod.rs
src/ui/views/: mod.rs
src/utils/: normalizeUrl.js
